0924 회원 정보수정 처리 완료

--- a/src/main/resources/error_message.properties
+++ b/src/main/resources/error_message.properties
@@ -17,3 +17,10 @@ Size.tempLoginUserBean.user_id = 사용자 아이디는 4~20 글자여야 합니
 Size.tempLoginUserBean.user_pw = 비밀번호는 4~20글자여야 합니다.
 Pattern.tempLoginUserBean.user_id = 사용자 아이디는 영문대소문자 숫자만 허용합니다.
 Pattern.tempLoginUserBean.user_pw = 비밀번호는 영문대소문자, 숫자만 허용합니다.
+
+Size.modifyUserBean.user_pw = 비밀번호는 4~20글자여야 합니다.
+Size.modifyUserBean.user_pw2 = 비밀번호는 4~20글자여야 합니다.
+Pattern.modifyUserBean.user_pw = 비밀번호는 영문대소문자, 숫자만 허용합니다.
+Pattern.modifyUserBean.user_pw2 = 비밀번호는 영문대소문자, 숫자만 허용합니다.
+NotEquals.modifyUserBean.user_pw = 비밀번호가 일치하지 않습니다.
+NotEquals.modifyUserBean.user_pw2 = 비밀번호가 일치하지 않습니다.
