--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.messages.basename=messages,error_message
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://project-shoesup.crnqds734kqb.ap-northeast-2.rds.amazonaws.com:3306/project-shoesup?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://project-shoesup.crnqds734kqb.ap-northeast-2.rds.amazonaws.com:3306/project_shoesup?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=whdrjffbs12!
